# godot3-dodge-haskell

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  download-godot.sh  godot3-dodge-haskell.cabal  stack.yaml
ffi/cbits/: flib.c
game/: HUD.gd  HUD.tscn  HUD2.gdns  HUD2.tscn  MainScript.gd  MainScript.tscn  MainScript2.gdns  MainScript2.tscn  Mob.gd  Mob.tscn  Mob2.gdns  Mob2.tscn  Player.gd  Player.tscn  Player2.gdns  Player2.tscn  project.godot
game/lib/: placeholder.txt
src/: Lib.hs  Util.hs
src/NSClass/: Hud2.hs  MainScript2.hs  Mob2.hs  Player2.hs
