cabal-version: 1.12

name:           godot3-dodge-haskell 
version:        0.0.0.0
description:    Please see the README on Github at <https://github.com/blah/my-haskell-godot-project#readme>
homepage:       https://github.com/blah/my-haskell-godot-project#readme
bug-reports:    https://github.com/blah/my-haskell-godot-project/issues
author:         blah
maintainer:     blah@blah.com
copyright:      blah
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/blah/my-haskell-godot-project

library
  exposed-modules: Lib, Util, NSClass.MainScript2, NSClass.Hud2, NSClass.Mob2, NSClass.Player2
  hs-source-dirs: src
  ghc-options:
    -Wall
    -fwarn-unused-do-bind
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
  build-depends:
      base >=4.12 && <5
    , godot-haskell
    , linear
    , stm
    , text
    , vector
    , random
    , async
    , lens
  default-language: Haskell2010

foreign-library godot3-dodge-haskell
  type: native-shared
  other-modules: FLib
  hs-source-dirs: ffi/flib
  c-sources: ffi/cbits/flib.c
  build-depends:
      base >= 4.12 && <5
    , godot-haskell
    , godot3-dodge-haskell
  default-language: Haskell2010


